# nac3

./: .gitignore  Cargo.toml  README.md  demo.c  flake.nix  llvm-future-riscv-abi.diff  llvm-mingw-crosscompile.diff  llvm-restrict-targets.diff  llvm-unbreak-static-cross.diff  mandelbrot.py  shell.nix  test.py
libnac3/: Cargo.toml
libnac3/src/: lib.rs
llvm/: default.nix  llvm-future-riscv-abi.diff
nac3artiq/: Cargo.toml  artiq_builtins.py  artiq_timeline_extern.py  demo.py  demo_host_obj.py  language.py  min_artiq.py
nac3artiq/demo/: demo.py  device_db.py  embedding_map.py  min_artiq.py
nac3artiq/src/: builtins.rs  codegen.rs  lib.rs  symbol_resolver.rs  timeline.rs
nac3ast/: Cargo.toml
nac3ast/src/: ast_gen.rs  constant.rs  lib.rs  location.rs
nac3core/: Cargo.toml  build.rs  rustfmt.toml
nac3core/src/: expression_inference.rs  inference_core.rs  lib.rs  location.rs  magic_methods.rs  primitives.rs  symbol_resolver.rs  top_level.rs  typedef.rs
nac3core/src/codegen/: concrete_type.rs  expr.rs  generator.rs  mod.rs  stmt.rs  test.rs
nac3core/src/codegen/irrt/: irrt.c  mod.rs
nac3core/src/context/: inference_context.rs  mod.rs  top_level_context.rs
nac3core/src/toplevel/: builtins.rs  composer.rs  helper.rs  mod.rs  test.rs  type_annotation.rs
nac3core/src/toplevel/snapshots/: nac3core__toplevel__test__test_analyze__generic_class.snap  nac3core__toplevel__test__test_analyze__inheritance_override.snap  nac3core__toplevel__test__test_analyze__list_tuple_generic.snap  nac3core__toplevel__test__test_analyze__self1.snap  nac3core__toplevel__test__test_analyze__simple_class_compose.snap  nac3core__toplevel__test__test_analyze__simple_pass_in_class.snap
nac3core/src/typecheck/: context.rs  expression_inference.rs  function_check.rs  inference_core.rs  location.rs  magic_methods.rs  mod.rs  primitives.rs  symbol_resolver.rs  test_typedef.rs  top_level.rs  type_check.rs  type_error.rs  type_inferencer.rs  typedef.rs  unification_table.rs
nac3core/src/typecheck/context/: global_context.rs  inference_context.rs  mod.rs  top_level_context.rs
nac3core/src/typecheck/escape_analysis/: lifetime.rs  mod.rs  test.rs
nac3core/src/typecheck/type_inferencer/: mod.rs  test.rs
nac3core/src/typecheck/typedef/: mod.rs  test.rs  test_typedef.rs
nac3embedded/: Cargo.toml  demo.py  device_db.py  language.py
nac3embedded/src/: lib.rs  symbol_resolver.rs
nac3parser/: Cargo.toml  README.md
nac3parser/src/: config_comment_helper.rs  lexer.rs  lib.rs  parser.rs  python.lalrpop  token.rs
nac3parser/src/snapshots/: nac3parser__fstring__tests__fstring_parse_selfdocumenting_base.snap  nac3parser__fstring__tests__fstring_parse_selfdocumenting_base_more.snap  nac3parser__fstring__tests__fstring_parse_selfdocumenting_format.snap  nac3parser__fstring__tests__parse_empty_fstring.snap  nac3parser__fstring__tests__parse_fstring.snap  nac3parser__fstring__tests__parse_fstring_equals.snap  nac3parser__fstring__tests__parse_fstring_nested_spec.snap  nac3parser__fstring__tests__parse_fstring_not_equals.snap  nac3parser__fstring__tests__parse_fstring_not_nested_spec.snap  nac3parser__fstring__tests__parse_fstring_selfdoc_prec_space.snap  nac3parser__fstring__tests__parse_fstring_selfdoc_trailing_space.snap  nac3parser__fstring__tests__parse_fstring_yield_expr.snap  nac3parser__parser__tests__comment_ambiguity.snap  nac3parser__parser__tests__more_comment.snap  nac3parser__parser__tests__parse_class.snap  nac3parser__parser__tests__parse_dict_comprehension.snap  nac3parser__parser__tests__parse_double_list_comprehension.snap  nac3parser__parser__tests__parse_empty.snap  nac3parser__parser__tests__parse_if_elif_else.snap  nac3parser__parser__tests__parse_kwargs.snap  nac3parser__parser__tests__parse_lambda.snap  nac3parser__parser__tests__parse_list_comprehension.snap  nac3parser__parser__tests__parse_print_2.snap  nac3parser__parser__tests__parse_print_hello.snap  nac3parser__parser__tests__parse_tuples.snap  nac3parser__parser__tests__sample_comment.snap
nac3standalone/: Cargo.toml  demo.c  mandelbrot.py  test.py
nac3standalone/demo/: check_demos.sh  classes.py  demo.c  demo.rs  interpret_demo.py  mandelbrot.py  run_demo.sh
nac3standalone/demo/src/: classes.py  default_param.py  initless.py  len.py  lists.py  loop.py  mandelbrot.py  min_max_abs.py  operators.py  option.py  pow.py  tuple.py  typevar.py
nac3standalone/src/: basic_symbol_resolver.rs  main.rs
nix/llvm/: default.nix
nix/windows/: PKGBUILD  default.nix  lld-disable-macho.diff  make_msys2_packages.sh  msys2_packages.nix
runkernel/: Cargo.toml  build.rs
runkernel/.cargo/: config
runkernel/src/: main.rs
src/: main.rs
windows/: default.nix  make_msys2_packages.sh  msys2_packages.nix
