[package]
name = "nac3artiq"
version = "0.1.0"
authors = ["M-Labs"]
edition = "2018"

[lib]
name = "nac3artiq"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.14", features = ["extension-module"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
parking_lot = "0.11"
nac3parser = { path = "../nac3parser" }
nac3core = { path = "../nac3core" }
