[package]
name = "nac3artiq"
version = "0.1.0"
authors = ["M-Labs"]
edition = "2018"

[lib]
name = "nac3artiq"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.14", features = ["extension-module"] }
parking_lot = "0.11"
tempfile = "3"
nac3parser = { path = "../nac3parser" }
nac3core = { path = "../nac3core" }

[dependencies.inkwell]
version = "0.1.0-beta.4"
default-features = false
features = ["llvm13-0", "target-x86", "target-arm", "target-riscv", "no-libffi-linking"]

[features]
init-llvm-profile = []
