[package]
name = "nac3ast"
version = "0.1.0"
authors = ["RustPython Team", "M-Labs"]
edition = "2018"

[features]
default = ["constant-optimization", "fold"]
constant-optimization = ["fold"]
fold = []

[dependencies]
lazy_static = "1.4.0"
parking_lot = "0.11.1"
string-interner = "0.13.0"
fxhash = "0.2.1"
