[package]
name = "nac3core"
version = "0.1.0"
authors = ["M-Labs"]
edition = "2018"

[dependencies]
num-bigint = "0.3"
num-traits = "0.2"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }
rustpython-parser = { git = "https://github.com/RustPython/RustPython", branch = "master" }
indoc = "1.0"
ena = "0.14"

[dev-dependencies]
test-case = "1.2.0"
itertools = "0.10.1"

