[package]
name = "nac3core"
version = "0.1.0"
authors = ["M-Labs"]
edition = "2018"

[dependencies]
itertools = "0.10.1"
crossbeam = "0.8.1"
parking_lot = "0.11.1"
rayon = "1.5.1"
nac3parser = { path = "../nac3parser" }

[dependencies.inkwell]
git = "https://github.com/TheDan64/inkwell.git"
default-features = false
features = ["llvm14-0", "target-x86", "target-arm", "target-riscv", "no-libffi-linking"]

[dev-dependencies]
test-case = "1.2.0"
indoc = "1.0"
insta = "=1.11.0"

[build-dependencies]
regex = "1"
