[package]
name = "nac3embedded"
version = "0.1.0"
authors = ["M-Labs"]
edition = "2018"

[lib]
name = "nac3embedded"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.12.4", features = ["extension-module"] }
rustpython-parser = { git = "https://github.com/RustPython/RustPython", branch = "master" }
