[package]
name = "nac3parser"
version = "0.1.2"
description = "Parser for python code."
authors = [ "RustPython Team", "M-Labs" ]
build = "build.rs"
license = "MIT"
edition = "2018"

[build-dependencies]
lalrpop = "0.19.6"

[dependencies]
nac3ast = { path = "../nac3ast" }
lalrpop-util = "0.19.6"
log = "0.4.1"
num-bigint = "0.4.0"
num-traits = "0.2"
unic-emoji-char = "0.9"
unic-ucd-ident  = "0.9"
unicode_names2 = "0.4"
phf = { version = "0.9", features = ["macros"] }
ahash = "0.7.2"

[dev-dependencies]
insta = "1.5"
