[package]
name = "nac3standalone"
version = "0.1.0"
authors = ["M-Labs"]
edition = "2018"

[dependencies]
parking_lot = "0.11.1"
nac3parser = { path = "../nac3parser" }
nac3core = { path = "../nac3core" }

[dependencies.inkwell]
git = "https://github.com/nbaksalyar/inkwell.git"
branch = "llvm14"
default-features = false
features = ["llvm14-0", "target-x86", "target-arm", "target-riscv", "no-libffi-linking"]
